# MoleMiner

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/rules/: code-style.md  no-placeholders.md  security.md  testing.md
.github/workflows/: ci.yml
docs/: 00-project-spec.md  01-architecture.md  02-tools-research.md  action-plan-ai-subsidy.md  autodev-api.md  autodev-design.md  autodev-ideation.md  autodev-index.md  autodev-rules.md  autodev-ui.md  conversation-log.md  search-export-test.md  search-full-7sources.md  search-progress.txt  search-result-shenzhen-ai.md  search-result-shenzhen-ai.txt  上海AI创业补贴.md  上海创业园.md  上海模速空间.md  义乌AI创业补贴.md  全国海归博士补贴.md  张江创业园.md  杭州AI创业补贴.md  杭州创业园.md  海归博士回国补贴-一线城市.md  深圳创业园.md
docs/pipeline/: config.yaml  reverse-report.md  state.yaml
docs/plans/: 2026-03-09-moleminer-mvp-plan.md  2026-03-10-mece-capability-analysis.md  2026-03-10-phase2-architecture-sources.md  2026-04-04-web-visualization-plan.md
src/moleminer/: __init__.py  aggregate.py  cli.py  config.py  models.py  output.py  pipeline.py  registry.py  store.py
tests/: test_aggregate.py  test_cli.py  test_config.py  test_dedupe.py  test_google.py  test_hackernews.py  test_http.py  test_integration.py  test_jina.py  test_models.py  test_pipeline.py  test_registry.py  test_sdk.py  test_source_registration.py  test_store.py
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: aggregate.ts  ai.ts  config.ts  index.ts  llm.ts  models.ts  output.ts  pipeline.ts  registry.ts  setup.ts  store.ts
(+91 files in other folders)
