[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moleminer"
version = "0.1.0"
description = "LLM-powered multi-source search aggregation CLI tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "MoleMiner Contributors" }]
keywords = ["search", "aggregation", "cli", "llm", "multi-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
tavily = ["tavily-python>=0.5"]
cn = ["playwright>=1.40"]
all = ["moleminer[tavily,cn]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]

[project.scripts]
moleminer = "moleminer.cli:main"

[project.urls]
Homepage = "https://github.com/moleminer/moleminer"
Repository = "https://github.com/moleminer/moleminer"

[tool.hatch.build.targets.wheel]
packages = ["src/moleminer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
